Fix for 'jumping' volume contorl in Safari

--- a/src/ui/controls/volume/volume.scss
+++ b/src/ui/controls/volume/volume.scss
@@ -106,6 +106,7 @@ $color: white !default;
     flex: 1;
 
     min-width: 100px;
+    height: 16px;
     padding: 10px;
 
     transition: visibility .2s, opacity .2s, display .2s;
