--- a/src/ui/controls/wrapper/wrapper.scss
+++ b/src/ui/controls/wrapper/wrapper.scss
@@ -3,6 +3,8 @@
 .controls-wrapper {
   z-index: 10;
 
+  outline: none;
+
   .gradient-background {
     position: absolute;
     z-index: 3;
